--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
-DOWNLOAD_PATH = "download"
+DOWNLOAD_PATH = download
 
-SECRET_KEY = "kJ|9Pk.GlwA6cv?L6N04GB|#sPeNnY<;"
+SECRET_KEY = kJ|9Pk.GlwA6cv?L6N04GB|sPeNnY<
 
-DB_URI = 'sqlite:///downloads.db'
+DB_URI = sqlite:///downloads.db
+
+# SMTP CREDENTIALS
+#gmail_smtp = ("smtp.gmail.com")
+#port = 587
+MY_EMAIL = "niiakoadjei.devops@gmail.com"
+EMAIL_PASSWORD = "eqyjoarqexyemxcj"
+
